# ai-pr-review-bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
pr_describer/: __init__.py  cli.py  commit_loader.py  config.py  describer.py  formatter.py  github_client.py  logging_utils.py
pr_reviewer/: __init__.py  cli.py  config.py  diff_loader.py  formatter.py  github_client.py  reviewer.py
templates/: pr-describe.yml  pr-review.yml
tests/: conftest.py
tests/test_pr_describer/: conftest.py  test_cli.py  test_commit_loader.py  test_describer.py  test_formatter.py  test_github_client.py
tests/test_pr_reviewer/: test_cli.py  test_diff_loader.py  test_formatter.py  test_github_client.py  test_reviewer.py
